configuracion con la base de datos